--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-sklearn = "^0.0.post5"
 pandas = "^2.0.3"
 ipykernel = "^6.24.0"
-toml = "^0.10.2"
+scikit-learn = "^1.3.0"
 
 
 [build-system]
