--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ pandas = "^2.0.3"
 ipykernel = "^6.24.0"
 scikit-learn = "^1.3.0"
 tqdm = "^4.65.0"
+catboost = "^1.2"
+xgboost = "^1.7.6"
 
 
 [build-system]
