removing testing.ipynb from git

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore testing notebook
+tests/testing.ipynb
+
 # Ignore catboost files
 tests/catboost_info/*
 exerevnetes/classification/tests/catboost_info/*
@@ -138,3 +141,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
